[project]
name = "tl-pax8"
version = "0.2.0"
description = "Pax8 API client"
authors = [
    { name = "Treeline Engineering", email = "engineering@treeline.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "python-dateutil>=2.9.0.post0",
    "urllib3>=2.3.0",
]

[project.scripts]
tl-pax8 = "tl_pax8:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
